--- a/TumblrAboutMe.html
+++ b/TumblrAboutMe.html
@@ -45,63 +45,7 @@ do not remove credits
 
 
 
-<style type="text/css">
-body {margin-left: 460px; height:100%; text-align:justify; font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif; font-size: 10px; line-height:9px; color:#ffffff; background-color:#090800;}
-
-.tumblrAutoPager_page_info, .tumblrAutoPager_page_separator {display:none;}
-
-.allposts {margin-top:5px; margin-left:500px; width:5px; padding-top:px; overflow:shown;}
-
-a {text-decoration:none; color:#edeef0; -webkit-transition: 0.5s ease-in;}
-a:hover {-webkit-transition: 0.5s ease-in; color:#ccc;}
-
-#entry {margin-bottom:5px;    width:400px;}
-#entry img { width:400px;}
-a img {border:0px;}
-#entry:hover .permalink {opacity: 1;}
-
-.info {left:240px; top:0px; padding:10px 10px 10px 10px; position:fixed; width:200px; height:100%; background-color:transparent; border-right: 1px dotted #dedede;}
-
-.blogtitle {font-style:italic; font-family: Baskerville, 'Times New Roman', Times, serif; padding-bottom:4px; text-align:left; font-size:40px; letter-spacing:px; text-transform:lowercase;}
-
-.description {max-width:200px; font-style:italic; margin-top:30px;}
-
-div.navlinks a {letter-spacing:-1px; padding:px; text-align:right; display:block; position:relative; color:#ffffff;}
-div.navlinks a:hover {letter-spacing:-1px; display:block; padding:px; color:#ccc;}
-
-.header {margin-left:-200px; position:fixed; width:200px;}
-
-.h2, .title {font-size:9px; font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif; letter-spacing: 0px; text-transform:uppercase;}
-.h3 {text-transform:uppercase;}
-.h4 {font-family: georgia; font-size:20px; line-height:25px; font-weight:; font-style:italic; letter-spacing: 2px; text-transform:lowercase; display:block;}
-.h5 {color:; font-family: arial ; font-size:40px; line-height:41px; font-weight:; font-style:; text-transform:lowercase; text-align:right;}
-
-#pag {letter-spacing:-1px; font-style:italic; width:3px; position:fixed; margin-bottom:-2px; margin-left:-800px; padding:5px; font-size:9px; bottom:2px;}
-
-.audio {background-color:#000000; margin-bottom : -10px;  width:400px;}
-
-.answer {color:#ffffff; margin-bottom:-15px; background-color:}
-
-div.video embed,
-div.post div.video object { width:400px; height:300px;}
-
-ol.notes {padding: 0px; margin-top:20px; margin-bottom: 10px; list-style-type: none; font-size:9px; text-align: center;}
-ol.notes li.note {text-align:left; border-top: solid 0px #ccc; padding: 0 0 3px 0;}
-ol.notes li.note img.avatar {vertical-align: -4px;margin-right: 10px;width: 16px; height: 16px;}
-ol.notes li.note span.action {font-weight: normal; font-size: 9px; text-align:left;}
-ol.notes li.note span.action a {font-size: 9px;font-weight: normal;text-align:left;}
-ol.notes li.note .answer_content {font-size: 9px;font-weight: normal;line-height: 10px;}
-ol.notes li.note blockquote {font-size: 9px;border-color: none;padding: 1px 3px;margin: 3px 0 3px 7px;}
-ol.notes li.note blockquote a {font-size: 9px;text-decoration: none;}
-
-blockquote {padding-left: 7px; border-left: 1px solid #ffffff; margin: 3px 10px 3px 7px;}
-
-.permalink {font-style: italic; float: right; padding-left: 6px;  margin-left:400px; margin-top:0px; padding-top:0px; position: absolute; text-align: left; width: 50px; height:10px; font-size: 9px; -webkit-transition: 0.5s ease-in; opacity:0;}
-.permalink a{color:;}
-.permalink a:hover {color:;}
-.entry:hover .permalink {opacity: 1;}
-
-</style>
+<link rel="stylesheet" type="text/css" href="Tumblr.css">
 
 
 
@@ -127,14 +71,12 @@ CHOOM GANG." /><meta name="twitter:app:name:iphone" content="Tumblr" /><meta nam
 
 <div class="allposts">
 <div class="info">
-<div class="blogtitle"><a href="/"><div align="right">Renetta Walcott</div></a></div>
+<div class="blogtitle"><a href="https://www.linkedin.com/profile/view?id=305495174&trk=nav_responsive_tab_profile"><div align="right">Renetta Walcott</div></a></div>
 <div class="description"><div align="right">19,Barnard College of Columbia University<br/>
 Click through my page.</div><br></div>
 <div class="navlinks">
 
-<div align="right">
-
-
+<a href="Tumblr.html">Home</a>
 <a href="TumblrContact.html">Contact Me</a>
 <a href="TumblrAboutMe.html">About Me</a>
 <br>
@@ -156,9 +98,15 @@ Click through my page.</div><br></div>
 
 <div id="entry">
 <span class="permalink"><a href="https://www.linkedin.com/profile/view?id=305495174&trk=nav_responsive_tab_profile">October 28th</a></span>
-<a href="">
+			
+			<p>Hello there! My name is Renetta, if you have not already read my navigation bar at the right.</p>
 
-<img src="me.jpg"></div>
+			<p>I am a current sophomore at the Barnard College of Columbia University. I am studying Sociology with a minor in Computer Science. I am currently an Athena Scholar, Mellon Mays Fellow, and Barnard HEOP Scholar. </p>
+
+			<p> I love technology, specifically apple products. They're desgned so beautifully and crafted to near perfection.I decided to take this CSS/HTML course because it is somehting I have always wanted to learn. Remember when myspace was a thing? Yeah, flashback. I loved picking a part the code of a profile to re-design it to my liking. </p>
+
+<a href="">
+<img src=""></div>
 </a>
 
 </div>
