Updates to Resume
Permalink change

--- a/tumblr.html
+++ b/tumblr.html
@@ -98,7 +98,8 @@ Click through my page.</div><br></div>
 
 
 <div id="entry">
-<span class="permalink"><a href="https://www.linkedin.com/profile/view?id=305495174&trk=nav_responsive_tab_profile">October 28th</a></span>
+<span class="permalink"><a href="https://www.linkedin.com/profile/view?id=305495174&trk=nav_responsive_tab_profile">
+</a></span>
 <a href="">
 
 <img src="me.jpg"></div>
